# demo

./: .gitignore  CMakeLists.txt  README.md  main.cpp  plot-orbit.m  test_solver.cpp
algorithms/: CMakeLists.txt
graphs/: CMakeLists.txt
include/: initial_conditions.h  ode_solver.h  utilities.h
include/algorithms/: _algorithms.h  _algorithms_exceptions.h  directed_dfs_multi.h  file_input.h  line.h  nfa.h  readNumber.h  read_edge_weighted_digraph.h  read_edge_weighted_graph.h  read_int_graph.h  read_symbol_graph.h  read_tokens.h  weighted_union_find.h
include/algorithms/release/: algorithms.h
include/containers/: _allocator.h  _containers.h  _containers_exceptions.h  _containers_globals.h  array.h  forward_list.h  impq.h  pq.h  queue.h  reverse_list.h  stack.h  symbol_table.h
include/containers/release/: containers.h
include/graphs/: _graphs.h  _graphs_exceptions.h  acyclic_lp.h  acyclic_sp.h  base_graph.h  breadth_first_paths.h  depth_first_order.h  depth_first_search.h  digraph.h  directed_cycle.h  directed_dfs_multi.h  edge.h  edge_weighted_digraph.h  edge_weighted_graph.h  graph.h  topological.h
include/graphs/release/: graphs.h
include/solver/: gravity.h  rk4solver.h  rkfsolver.h  solver_functor_base.h
include/utilities/: _utilities.h  expand_path.h  permutator.h  timer.h
src/: initial_conditions.cpp  main.cpp  test_algorithms.cpp  test_graphs.cpp  test_solver.cpp
src/algorithms/: _algorithms.cpp  directed_dfs_multi.cpp  file_input.cpp  line.cpp  nfa.cpp  readNumber.cpp  read_edge_weighted_digraph.cpp  read_edge_weighted_graph.cpp  read_int_graph.cpp  read_symbol_graph.cpp  read_tokens.cpp  weighted_union_find.cpp
src/graphs/: _graphs.cpp  acyclic_lp.cpp  acyclic_sp.cpp  base_graph.cpp  breadth_first_paths.cpp  depth_first_order.cpp  depth_first_search.cpp  digraph.cpp  directed_cycle.cpp  directed_dfs_multi.cpp  edge.cpp  edge_weighted_digraph.cpp  edge_weighted_graph.cpp  graph.cpp  topological.cpp
src/solver/: gravity.cpp
src/solver/asm/: globals.asm  rk4.asm  rkf.asm
src/utilities/: _utilities.cpp  expand_path.cpp  timer.cpp
test-cases/: graph.txt  test-re.txt
utilities/: CMakeLists.txt
